loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:-7: error: Unmatched closing brace '}' ignored here
	}
        ^LoopFor:-6: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^LoopFor:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^